--- a/index.html
+++ b/index.html
@@ -95,13 +95,16 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M9 5l7 7-7 7" /></svg>
       </a>
 
-      <!-- Bumiayu (new link) -->
+      <a href="https://bonehacker-id.github.io/daftarantrianbrebes/" class="branch-card flex items-center justify-between p-5 rounded-2xl text-base font-semibold">
+        <span>Bone Hacker Brebes</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M9 5l7 7-7 7" /></svg>
+      </a>
+
       <a href="https://bonehacker-id.github.io/daftarantrianbumiayu/" class="branch-card flex items-center justify-between p-5 rounded-2xl text-base font-semibold">
         <span>Bone Hacker Bumiayu</span>
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M9 5l7 7-7 7" /></svg>
       </a>
 
-      <!-- Kebumen (new link) -->
       <a href="https://bonehacker-id.github.io/daftarantriankebumen/" class="branch-card flex items-center justify-between p-5 rounded-2xl text-base font-semibold">
         <span>Bone Hacker Kebumen</span>
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M9 5l7 7-7 7" /></svg>
